web-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: clinichistory-web
          image: neshgogo/clinichistory-web:latest

---
apiVersion: v1
kind: Service
metadata:
  name: web-clusterip-srv
spec: 
  type: ClusterIP
  selector:
    app: webapp
  ports:
  - name: webapp
    protocol: TCP
    port: 80
    targetPort: 80
