ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: neshgogo.com
      http:
        paths:
          - path: /doctorService/api
            pathType: Prefix
            backend:
              service:
                name: doctors-clusterip-srv
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: accounts-clusterip-srv
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-clusterip-srv
                port:
                  number: 80
